fixes scrolling when swipe is active on mobiles

--- a/src/styles/components/slider.less
+++ b/src/styles/components/slider.less
@@ -26,6 +26,7 @@
 
       .slide {
         flex: 1 0 auto;
+        pointer-events: none;
       }
     }
   }
